<resources>
    <string name="app_name">assignment3_diaz</string>
    <string name="search">Search</string>
    <string name="enter_a_movie_to_search">Enter a movie to search</string>
    <string name="details">Details</string>
    <string name="search_movies">Search movies...</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="_2024">2024</string>
    <string name="movie_title">Movie Title</string>
    <string name="starring">Starring: ...</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="back">Back</string>
    <string name="logo_image">Logo Image</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="no_account">No Account?</string>
    <string name="register_now">Register Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="no_movies_favourited">No Movies Favourited</string>
</resources>